--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,7 @@
 body {
     background-color: #FB6B6B;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100vw;
@@ -19,7 +20,15 @@ h1 {
     font-size: 36px;
     font-weight: 400;
     color: white;
-    margin: 20px 0 30px 0;    
+}
+
+.root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .initial-box {
@@ -31,6 +40,7 @@ h1 {
 }
 .initial-box img {
     height: 161px;
+    margin-bottom: 20px;
 }
 
 .initial-button {
@@ -47,4 +57,18 @@ h1 {
     font-family: 'Recursive';
     font-weight: 400;
     font-size: 18px;
+    margin-top: 30px;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 375px;
+    margin: 50px 0;
+}
+
+.header img {
+    height: 60px;
+    margin-right: 30px;
 }
