--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22,6 +22,18 @@ h1 {
     color: white;
 }
 
+h3 {
+    font-family: 'Recursive';
+    font-weight: 400;
+font-size: 18px;
+}
+
+h4 {
+    font-family: 'Recursive';
+    font-weight: 700;
+    font-size: 16px;
+}
+
 .root {
     display: flex;
     flex-direction: column;
@@ -71,4 +83,40 @@ h1 {
 .header img {
     height: 60px;
     margin-right: 30px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    background-color: #FFFFFF;
+    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+}
+
+.flashcard-closed {
+    width: 300px;
+    height: 65px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.flashcard-closed ion-icon {
+    width: 25px;
+    height: 25px;
+}
+
+.flashcard-open {
+    width: 300px;
+    height: 131px;
+    background: #FFFFD5;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+
 }
