--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -77,7 +77,7 @@ h4 {
     justify-content: center;
     align-items: center;
     width: 375px;
-    margin: 50px 0;
+    margin: 30px 0 0 0;
 }
 
 .header img {
@@ -105,6 +105,7 @@ h4 {
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+    margin-bottom: 20px;
 }
 
 .flashcard-closed ion-icon {
@@ -118,5 +119,6 @@ h4 {
     background: #FFFFD5;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
+    margin-bottom: 20px;
 
 }
