--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,13 @@ body {
     height: 100vh;
 }
 
+p {
+    font-family: 'Recursive';
+    font-weight: 400;
+    font-size: 12px;
+    color: white;
+}
+
 h1 {
     font-family: 'Righteous';    
     font-size: 36px;
@@ -25,7 +32,7 @@ h1 {
 h3 {
     font-family: 'Recursive';
     font-weight: 400;
-font-size: 18px;
+    font-size: 18px;
 }
 
 h4 {
@@ -115,10 +122,60 @@ h4 {
 
 .flashcard-open {
     width: 300px;
-    height: 131px;
+    max-height: 200px;
     background: #FFFFD5;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
     margin-bottom: 20px;
+    padding: 10px 15px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.flashcard-open img {
+    margin-top: 50px;
+}
+
+
+.options {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 40px;
+}
+
+.naoLembrei {
+    width: 85px;
+    height: 37px;
+    background-color: #FF3030;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.quaseNaoLembrei {
+    width: 85px;
+    height: 37px;
+    background-color: #FF922E;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.zap {
+    width: 85px;
+    height: 37px;
+    background-color: #2FBE34;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
